tests/ui/editions/async-block-2015.stderr
error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/async-block-2015.rs:2:1
   |
LL | async fn foo() {
   | ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error: expected identifier, found keyword `let`
  --> $DIR/async-block-2015.rs:12:9
   |
LL |     let y = async {
   |             ----- `async` blocks are only allowed in Rust 2018 or later
LL |         let x = 42;
   |         ^^^ expected identifier, found keyword
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error: expected identifier, found `42`
  --> $DIR/async-block-2015.rs:20:9
   |
LL |     let z = async {
   |             ----- `async` blocks are only allowed in Rust 2018 or later
LL |         42
   |         ^^ expected identifier
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0422]: cannot find struct, variant or union type `async` in this scope
  --> $DIR/async-block-2015.rs:8:13
   |
LL |     let x = async {};
   |             ^^^^^ `async` blocks are only allowed in Rust 2018 or later

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0422, E0670.
For more information about an error, try `rustc --explain E0422`.
